--- a/frontend/index.html
+++ b/frontend/index.html
@@ -16,6 +16,8 @@
       href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/all.min.css"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Metaetiqueta de Cryptomus -->
+    <meta name="cryptomus-verification" content="9c884a69" />
     <title>Vite + React + TS</title>
   </head>
   <body>
