--- a/frontend/index.html
+++ b/frontend/index.html
@@ -17,7 +17,7 @@
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Metaetiqueta de Cryptomus -->
-    <meta name="cryptomus-verification" content="9c884a69" />
+    <meta name="cryptomus" content="9c884a69" />
     <title>Vite + React + TS</title>
   </head>
   <body>
